# rintty

./: Cargo.toml  README.md  run_tty2.sh
src/: animation.rs  app.rs  auth.rs  lib.rs  main.rs  tui.rs  utils.rs
test/: background_test.py  bouncing_ball.py  curses_overwrite_line.py  debug_pty.py  simple_text.py  spin_cube.py
