[package]
name = "rintty"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true       # Strip symbols from binary (reduces size by ~30%)
lto = true         # Link-time optimization (smaller, faster binary)
codegen-units = 1  # Better optimization (slower compile, smaller binary)

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
crossterm = "0.29.0"
libc = "0.2.174"
log = "0.4"
nix = { version = "0.30.1", features = ["fs", "process", "term", "user"] }
pam = "0.7.0"
ratatui = "0.29.0"
simplelog = "0.12"
vte = "0.15.0"

